--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     .muted{color:#64748b; font-size:13px;}
     .demandHeat { position:absolute; inset:0; pointer-events:none; }
     .heatDot { position:absolute; width:10px; height:10px; border-radius:50%; background:rgba(239,68,68,0.22); transform:translate(-50%,-50%); filter:blur(4px); }
-    .odLine { position:absolute; pointer-events:none; }
+    .odLine { position:absolute; inset:0; pointer-events:none; }
     .odLine svg { overflow:visible; }
     .badge { display:inline-block; padding:2px 8px; border-radius:9999px; background:#fee2e2; color:#991b1b; font-size:12px; font-weight:600; }
     .routeItem { background:rgba(255,255,255,0.9); border:1px solid #d7ece3; border-radius:10px; padding:10px; margin-top:8px; cursor:pointer; transition:box-shadow 0.2s, border-color 0.2s; }
@@ -711,13 +711,18 @@
       const w = Math.max(1, Math.round(1 + t.tripsPerDay/6));
       const svg = document.createElementNS("http://www.w3.org/2000/svg","svg");
       svg.setAttribute("style","position:absolute; left:0; top:0; width:100%; height:100%;");
-      const line = document.createElementNS("http://www.w3.org/2000/svg","line");
-      line.setAttribute("x1",x1); line.setAttribute("y1",y1);
-      line.setAttribute("x2",x2); line.setAttribute("y2",y2);
-      line.setAttribute("stroke","rgba(220,38,38,0.6)");
-      line.setAttribute("stroke-width",w);
-      line.setAttribute("stroke-linecap","round");
-      svg.appendChild(line);
+      const path = document.createElementNS("http://www.w3.org/2000/svg","polyline");
+      // Route orthogonally to better match the grid aesthetic
+      const viaX = Math.abs(x2 - x1) > Math.abs(y2 - y1) ? x2 : x1;
+      const viaY = viaX === x2 ? y1 : y2;
+      const points = `${x1},${y1} ${viaX},${viaY} ${x2},${y2}`;
+      path.setAttribute("points", points);
+      path.setAttribute("fill", "none");
+      path.setAttribute("stroke","rgba(220,38,38,0.6)");
+      path.setAttribute("stroke-width",w);
+      path.setAttribute("stroke-linecap","round");
+      path.setAttribute("stroke-linejoin","round");
+      svg.appendChild(path);
       inspectorLayer.appendChild(svg);
     }
   }
