--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
     .center-foot{border-top:1px solid #e9f4ef; border-bottom:0;}
     .map-wrap{flex:1; display:grid; place-content:center; overflow:hidden;}
     #mapSquare{background:#f6fbf9; border:1px solid #e3f2ec; border-radius:12px; position:relative;}
-    .gridLines{position:absolute; inset:0; background-image:linear-gradient(to right, var(--grid-border) 1px, transparent 1px),linear-gradient(to bottom, var(--grid-border) 1px, transparent 1px); background-size: 32px 32px; border-radius:12px; pointer-events:none;}
+    .gridLines{position:absolute; inset:0; background-image:linear-gradient(to right, var(--grid-border) 1px, transparent 1px),linear-gradient(to bottom, var(--grid-border) 1px, transparent 1px); background-size: 32px 32px; border-radius:12px; pointer-events:none; z-index:1;}
+    .routeOverlay{position:absolute; inset:0; pointer-events:none; z-index:2;}
+    .routeOverlay svg{width:100%; height:100%; overflow:visible;}
     .tile{position:absolute; transform: translate(-50%,-50%); font-size:18px;}
     .section{padding:14px; border-bottom:1px solid #e9f4ef;}
     .section:last-child{border-bottom:0;}
     .hstack{display:flex; align-items:center; gap:8px; flex-wrap:wrap;}
     .stat{font-weight:700; color:#059669; font-size:28px;}
     .muted{color:#64748b; font-size:13px;}
-    .demandHeat { position:absolute; inset:0; pointer-events:none; }
+    .demandHeat { position:absolute; inset:0; pointer-events:none; z-index:3; }
     .heatDot { position:absolute; width:10px; height:10px; border-radius:50%; background:rgba(239,68,68,0.22); transform:translate(-50%,-50%); filter:blur(4px); }
-    .odLine { position:absolute; inset:0; pointer-events:none; }
+    .odLine { position:absolute; inset:0; pointer-events:none; z-index:5; }
     .odLine svg { overflow:visible; }
     .badge { display:inline-block; padding:2px 8px; border-radius:9999px; background:#fee2e2; color:#991b1b; font-size:12px; font-weight:600; }
     .routeItem { background:rgba(255,255,255,0.9); border:1px solid #d7ece3; border-radius:10px; padding:10px; margin-top:8px; cursor:pointer; transition:box-shadow 0.2s, border-color 0.2s; }
@@ -77,7 +79,8 @@
     .routeItem input[type="text"] { flex:1; min-width:120px; border:1px solid #d1e7dc; border-radius:6px; padding:4px 6px; font-size:13px; font-weight:600; color:#0f172a; background:#f9fffc; }
     .routeItem .routeMeta { display:flex; align-items:center; gap:10px; margin-top:8px; font-size:13px; color:#475569; flex-wrap:wrap; }
     .routeItem label { display:flex; align-items:center; gap:4px; font-size:12px; color:#475569; }
-    .stopMarker { position:absolute; width:16px; height:16px; border-radius:50%; background:#059669; transform:translate(-50%,-50%); border:2px solid #ecfdf5; box-shadow:0 0 0 2px rgba(13,148,136,0.15); pointer-events:none; }
+    .stopMarker { position:absolute; width:18px; height:18px; border-radius:50%; transform:translate(-50%,-50%); border:2px solid #ecfdf5; box-shadow:0 0 0 2px rgba(13,148,136,0.15); pointer-events:none; display:flex; align-items:center; justify-content:center; background:#059669; z-index:4; }
+    .stopMarker .stopCore { width:6px; height:6px; border-radius:50%; background:#ecfdf5; box-shadow:0 0 3px rgba(15,23,42,0.25) inset; flex-shrink:0; }
   </style>
 </head>
 <body>
@@ -183,6 +186,7 @@
   const FARE_MAX=3.0;
   const FARE_STEP=0.05;
   const DEFAULT_FARE=2.0;
+  const DEFAULT_STOP_COLOR="#059669";
 
   let simMinute=SERVICE_START;
   let simDay=1;
@@ -206,6 +210,7 @@
     map.querySelector(".gridLines").style.backgroundSize=cell+"px "+cell+"px";
     map.dataset.cell=cell;
     repositionStops();
+    renderRouteOverlays();
   }
 
   // --- STATE
@@ -216,6 +221,7 @@
   let routes=[]; // list of {id,name,color,vehicles,stops:[],ridership}
   let editingRouteId=null;
   let routeSeq=1;
+  let routeOverlayLayer=null;
 
   // --- helpers
   function addTile(emoji,gx,gy,scale=1){
@@ -259,6 +265,46 @@
     return coords;
   }
 
+  function ensureRouteOverlay(){
+    const map=$("#mapSquare");
+    if(!map) return null;
+    if(!routeOverlayLayer || routeOverlayLayer.parentNode!==map){
+      routeOverlayLayer=document.createElement("div");
+      routeOverlayLayer.className="routeOverlay";
+      map.appendChild(routeOverlayLayer);
+    }
+    return routeOverlayLayer;
+  }
+
+  function renderRouteOverlays(){
+    const map=$("#mapSquare");
+    if(!map) return;
+    const layer=ensureRouteOverlay();
+    if(!layer) return;
+    const cell=parseInt(map.dataset.cell||"24",10);
+    const size=cell*GRID;
+    layer.innerHTML="";
+    const svg=document.createElementNS("http://www.w3.org/2000/svg","svg");
+    svg.setAttribute("viewBox",`0 0 ${size} ${size}`);
+    svg.setAttribute("width", size);
+    svg.setAttribute("height", size);
+    layer.appendChild(svg);
+    const strokeWidth=Math.max(2, Math.round(cell*0.12));
+    for(const route of routes){
+      const coords=routeStopCoords(route);
+      if(coords.length<2) continue;
+      const points=coords.map(c=>`${c.x*cell+cell/2},${c.y*cell+cell/2}`).join(" ");
+      const polyline=document.createElementNS("http://www.w3.org/2000/svg","polyline");
+      polyline.setAttribute("points", points);
+      polyline.setAttribute("fill", "none");
+      polyline.setAttribute("stroke", route.color || DEFAULT_STOP_COLOR);
+      polyline.setAttribute("stroke-width", strokeWidth);
+      polyline.setAttribute("stroke-linecap", "round");
+      polyline.setAttribute("stroke-linejoin", "round");
+      svg.appendChild(polyline);
+    }
+  }
+
   function computeLoopMinutes(route){
     const coords=routeStopCoords(route);
     if(coords.length<2){
@@ -282,21 +328,52 @@
 
   function ensureStop(gx,gy){
     const key=stopKey(gx,gy);
-    if(stops.has(key)) return stops.get(key);
-    const cell=parseInt($("#mapSquare").dataset.cell||"24",10);
+    const map=$("#mapSquare");
+    const cell=parseInt(map.dataset.cell||"24",10);
+    if(stops.has(key)){
+      const existing=stops.get(key);
+      if(!existing.routes) existing.routes=new Set();
+      const size=Math.max(14, Math.round(cell*0.45));
+      existing.el.style.width=size+"px";
+      existing.el.style.height=size+"px";
+      let core=existing.el.querySelector('.stopCore');
+      if(!core){
+        core=document.createElement("div");
+        core.className="stopCore";
+        existing.el.appendChild(core);
+      }
+      if(core){
+        const coreSize=Math.max(4, Math.round(size*0.35));
+        core.style.width=coreSize+"px";
+        core.style.height=coreSize+"px";
+      }
+      updateStopColors(existing);
+      return existing;
+    }
     const marker=document.createElement("div");
     marker.className="stopMarker";
+    const size=Math.max(14, Math.round(cell*0.45));
+    marker.style.width=size+"px";
+    marker.style.height=size+"px";
     marker.style.left=(gx*cell+cell/2)+"px";
     marker.style.top =(gy*cell+cell/2)+"px";
-    $("#mapSquare").appendChild(marker);
-    const stop={id:`s${key}`,x:gx,y:gy,el:marker,usage:0};
+    const core=document.createElement("div");
+    core.className="stopCore";
+    const coreSize=Math.max(4, Math.round(size*0.35));
+    core.style.width=coreSize+"px";
+    core.style.height=coreSize+"px";
+    marker.appendChild(core);
+    map.appendChild(marker);
+    const stop={id:`s${key}`,x:gx,y:gy,el:marker,usage:0,routes:new Set()};
     stops.set(key,stop);
+    updateStopColors(stop);
     return stop;
   }
 
   function removeStopMarkerIfUnused(stop){
     if(stop.usage<=0){
       if(stop.el && stop.el.parentNode) stop.el.parentNode.removeChild(stop.el);
+      if(stop.routes) stop.routes.clear();
       stops.delete(stopKey(stop.x,stop.y));
     }
   }
@@ -304,6 +381,7 @@
   function resetAllStops(){
     stops.forEach(s=>{ if(s.el && s.el.parentNode) s.el.parentNode.removeChild(s.el); });
     stops.clear();
+    renderRouteOverlays();
   }
 
   function repositionStops(){
@@ -311,7 +389,68 @@
     stops.forEach(stop=>{
       stop.el.style.left=(stop.x*cell+cell/2)+"px";
       stop.el.style.top =(stop.y*cell+cell/2)+"px";
+      const size=Math.max(14, Math.round(cell*0.45));
+      stop.el.style.width=size+"px";
+      stop.el.style.height=size+"px";
+      const core=stop.el.querySelector('.stopCore');
+      if(core){
+        const coreSize=Math.max(4, Math.round(size*0.35));
+        core.style.width=coreSize+"px";
+        core.style.height=coreSize+"px";
+      }
+      updateStopColors(stop);
     });
+  }
+
+  function updateStopColors(stop){
+    if(!stop || !stop.el) return;
+    if(!stop.routes) stop.routes=new Set();
+    const colors=[];
+    const validIds=new Set();
+    for(const route of routes){
+      if(stop.routes.has(route.id)){
+        colors.push(route.color || DEFAULT_STOP_COLOR);
+        validIds.add(route.id);
+      }
+    }
+    for(const id of [...stop.routes]){
+      if(!validIds.has(id)){
+        stop.routes.delete(id);
+      }
+    }
+    let background=DEFAULT_STOP_COLOR;
+    if(colors.length===1){
+      background=colors[0];
+    }else if(colors.length>1){
+      let angle=0;
+      const total=colors.length;
+      const segments=colors.map((color,index)=>{
+        const start=angle;
+        const span=index===total-1 ? 360-start : 360/total;
+        angle+=span;
+        const end=start+span;
+        return `${color} ${start}deg ${end}deg`;
+      });
+      background=`conic-gradient(${segments.join(',')})`;
+    }
+    stop.el.style.background=background;
+    const core=stop.el.querySelector('.stopCore');
+    if(core){
+      core.style.background='#ecfdf5';
+    }
+  }
+
+  function refreshStopsForRoute(route){
+    if(!route) return;
+    for(const stopId of route.stops){
+      const key=stopId.startsWith('s') ? stopId.slice(1) : stopId;
+      const stop=stops.get(key);
+      if(stop){
+        if(!stop.routes) stop.routes=new Set();
+        stop.routes.add(route.id);
+        updateStopColors(stop);
+      }
+    }
   }
 
   function resetRoutes(){
@@ -443,6 +582,7 @@
     if(!routes.length){
       list.textContent='No routes yet. Add one to begin planning.';
       list.classList.add('muted');
+      renderRouteOverlays();
       return;
     }
     list.classList.remove('muted');
@@ -475,7 +615,13 @@
       colorInput.type="color";
       colorInput.value=route.color;
       colorInput.addEventListener("click",e=>e.stopPropagation());
-      colorInput.addEventListener("input",e=>{ route.color=e.target.value; updateRouteDetails(); renderRoutesPanel(); });
+      colorInput.addEventListener("input",e=>{
+        route.color=e.target.value;
+        updateRouteDetails();
+        refreshStopsForRoute(route);
+        renderRouteOverlays();
+        renderRoutesPanel();
+      });
 
       title.appendChild(nameInput);
       title.appendChild(colorInput);
@@ -525,6 +671,7 @@
 
       list.appendChild(item);
     }
+    renderRouteOverlays();
   }
 
   function addStopToRoute(route,gx,gy){
@@ -534,10 +681,14 @@
     }
     route.stops.push(stop.id);
     stop.usage=(stop.usage||0)+1;
+    if(!stop.routes) stop.routes=new Set();
+    stop.routes.add(route.id);
+    updateStopColors(stop);
     updateRouteMetrics(route);
     updateRouteStats();
     updateRouteDetails();
     renderRoutesPanel();
+    renderRouteOverlays();
   }
 
   function removeStopFromRoute(route,gx,gy){
@@ -548,11 +699,14 @@
     if(idx>-1){
       route.stops.splice(idx,1);
       stop.usage=Math.max(0,(stop.usage||0)-1);
+      if(stop.routes) stop.routes.delete(route.id);
+      updateStopColors(stop);
       removeStopMarkerIfUnused(stop);
       updateRouteMetrics(route);
       updateRouteStats();
       updateRouteDetails();
       renderRoutesPanel();
+      renderRouteOverlays();
     }
   }
 
@@ -886,7 +1040,7 @@
     // controls
     $("#fareMinus").onclick=()=>{ setFare(fare-FARE_STEP); };
     $("#farePlus").onclick=()=>{ setFare(fare+FARE_STEP); };
-    window.addEventListener("resize",()=>{ sizeMap(); renderHeat(); /* positions persist */ });
+    window.addEventListener("resize",()=>{ sizeMap(); renderHeat(); renderRouteOverlays(); /* positions persist */ });
 
     $("#mapSquare").addEventListener("click", mapClickRouter);
     $("#addRoute").addEventListener("click", ()=>{
