Center map after window resize

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     .center-head,.center-foot{padding:12px 14px; border-bottom:1px solid #e9f4ef;}
     .center-head{display:flex; flex-direction:column; gap:4px;}
     .center-foot{border-top:1px solid #e9f4ef; border-bottom:0;}
-    .map-wrap{flex:1; display:grid; place-content:center; overflow:hidden;}
+    .map-wrap{flex:1; display:grid; place-items:center; overflow:hidden;}
     #mapSquare{background:#f6fbf9; border:1px solid #e3f2ec; border-radius:12px; position:relative;}
     .gridLines{position:absolute; inset:0; background-image:linear-gradient(to right, var(--grid-border) 1px, transparent 1px),linear-gradient(to bottom, var(--grid-border) 1px, transparent 1px); background-size: 32px 32px; border-radius:12px; pointer-events:none; z-index:1;}
     .routeOverlay{position:absolute; inset:0; pointer-events:none; z-index:2;}
